styles/Posts.module.css
.mainContainer {
  --back: #0f1012;
  --text: #fffaff;
  --highlight: #7ae582;
  --secondHighlight: #5d2e8c;
  font-family: "Roboto";
  width: 100%;
}

.titleContainer {
  text-align: center;
  height: 100px;
}

.mainContainer p {
  width: 70%;
  margin: 0 auto;
  line-height: 2rem;
}

.paragraph {
  padding-bottom: 34px;
}

.blogImage {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

